Fix some spacing around following avatars on profiles

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -177,6 +177,11 @@
 
     .users > li {
         margin: 0;
+        margin-top: 5px;
+    }
+
+    .following h5 {
+        margin-bottom: 0;
     }
 
     .following img {
